--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,15 @@
 @import 'tailwindcss';
+/* @plugin "" */
+:root {
+  --header-height: 64px;
+}
+@theme {
+  --color-primary-black: #232527;
+  --color-secondary-black: #26303e;
+  --color-dark-blue: #26303e;
+  --color-input-gray: #333333;
+  --color-bg-text: #26303e;
+  --color-bg-header: #252729;
+  --max-height-header: var(--header-height);
+  --max-height-content: calc(100vh - var(--header-height));
+}
